--- a/hari/mathapp/templates/mathapp/math.html
+++ b/hari/mathapp/templates/mathapp/math.html
@@ -45,10 +45,10 @@ padding-top: 20px;
 <form method="POST">
 {% csrf_token %}
 <div class="formelt">
-Length : <input type="text" name="base" value="{{b}}"></input>(in m)<br/>
+Base : <input type="text" name="base" value="{{b}}"></input>(in m)<br/>
 </div>
 <div class="formelt">
-Breadth : <input type="text" name="height" value="{{h}}"></input>(in m)<br/>
+Height : <input type="text" name="height" value="{{h}}"></input>(in m)<br/>
 </div>
 <div class="formelt">
 <input type="submit" value="Calculate"></input><br/>
